--- a/templates/allauth/base.html
+++ b/templates/allauth/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    { %endblock%}
+    {% endblock %}
     {% block extra_meta %}
     {% endblock %}
     {% block extra_css %}
@@ -16,6 +16,8 @@
     {% block extra_js %}
     {% endblock %}
     {% block title %}
+    {% endblock %}
+
 
     {% block corecss %}
     <!-- Bootstrap CSS -->
@@ -40,18 +42,36 @@
 
 <body>
     <header class="container-fluid fixed-top"></header>
-    {%if messages% }
-    <div class="message-container"></div>
-    {%endif%}
+    {% if messages %}
+    <div class="message-container">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     {% block page_header %}
-    {%endblock%}
+    {% endblock %}
 
     {% block content %}
-    {%endblock%}
+    {% endblock %}
 
 
-    {%block postloadjs%}
-    {%endblock%}
+
+    {% block postloadjs %}
+    {% endblock %}
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
