--- a/templates/allauth/base.html
+++ b/templates/allauth/base.html
@@ -41,7 +41,42 @@
 </head>
 
 <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-fluid fixed-top">
+        <div class="row">
+            <div class="col-12 col-lg-4 my-auto py-lg-0 text-center text-lg-left"> <a href="{% url 'home' ‰}"
+                    class="nav-link main-logo-link">
+                    <h2 class=" logo-font text-black my-0"> <strong>Boutique</strong>Ado</h2>
+
+                    </h2>
+                </a>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-lg-0">
+                <form method="GET" action="">
+                    <div class="input-group w=100">
+                        <input type="text" class="form-control border border-black rounded-0" placeholder="Search">
+
+                        <div class="input-group-append">
+
+                            <button class="form-control btn btn-black border border-black rounded-0" type="submit"
+                                id="button-addon2">Search</button>
+                            <span class="icon">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-lg-0">
+                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item dropdown"></li>
+                    <li class="list-inline-item"></li>
+
+                </ul>
+            </div>
+
+        </div>
+    </header>
+
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
